--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,6 +25,7 @@ header{
     background-size: cover; /*Image To Fit*/
     background-position: center; /*Centering Image*/
     height: 100vh;
+    background-attachment: fixed;
 }
 
 h1{
@@ -155,6 +156,7 @@ section h3,h2{
     padding-bottom: 0px;
     text-transform: uppercase;
     margin-bottom: 30px;
+    text-align: center;
     
 }
 
@@ -217,6 +219,114 @@ h2:after{    /*Content just after h2 tag*/
     transform: scale(1.03);  /* Hover Scale down 1.03*/
     opacity: 1;
 }
+
+.section-steps{
+    width: 100%;
+    margin: 0 auto;
+    background-color: #e5e5e5;
+}
+
+.section-steps h2{
+    padding-top:30px;
+}
+
+.app-screen{
+    width: 49%;
+    margin: 0px auto;
+    margin-left: 25%;
+}
+.steps-box{
+    margin-top: 3px;
+}
+
+.steps-box:last-child{
+    margin-top: 15%;
+}
+
+.work-steps{
+    margin-bottom: 30px;
+}
+
+.work-steps div{
+    color: #e67e22;
+    border: 2px solid #e67e22;
+    display: inline-block;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    font-size: 20px;
+    padding-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    float: left;
+}
+
+.work-steps div:hover {
+    background-color: #e67e22;
+    color: #fff;
+}
+
+.work-steps p{
+    font-weight: 300;
+}
+
+/*Clearfix Property- To Apply Margin after Image gallery*/
+
+.clearfix{zoom: 1}
+.clearfix:after{
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
